# home-avd-development

./: Makefile  ansible.cfg
BOX-2024-06-24/: Makefile  pyproject.toml  python-requirements.txt
BOX-2024-06-24/S1_OT_FABRIC_REPOSITORY/: inventory.yml
BOX-2024-06-24/S1_OT_FABRIC_REPOSITORY/documentation/devices/: hs11aot01a.md  hs11aot02a.md  hs11aot03a.md  hs11aot04a.md  hs11aot05a.md  hs11aot06a.md  hs11aot07a.md  hs11aot08a.md  hs11aot09a.md  hs11aot10a.md  hs11aot11a.md  hs11aot12a.md  hs11aot13a.md  hs11aot14a.md  hs11aot15a.md  hs11aot16a.md  hs11aot17a.md  hs11aot18a.md  hs11aot19a.md  hs11aot20a.md  hs11aot21a.md  hs11aot22a.md  hs11aot23a.md  hs11aot24a.md  hs11aot25a.md  hs11beot01a.md  hs11beot02a.md  hs11beot03a.md  hs11beot04a.md  hs11beot05a.md  hs11beot06a.md  hs11beot07a.md  hs11beot08a.md  hs11beot09a.md  (+207 more)
BOX-2024-06-24/S1_OT_FABRIC_REPOSITORY/group_vars/: S1_OT_FABRIC.yml  S1_OT_SPINES.yml
BOX-2024-06-24/SM_CORE_MISC_FABRIC/: inventory.yml
BOX-2024-06-24/SM_CORE_MISC_FABRIC/group_vars/: CAMPUS_CORES.yml  MISC_CORES_ENDPOINTS.yml  MISC_CORES_TUNNELS.yml
BOX-2024-06-24/SM_DC1-DC2_FABRIC/: inventory.yml
BOX-2024-06-24/SM_DC1-DC2_FABRIC/group_vars/: SM_DC1_FABRIC.yml  SM_DC2_FABRIC.yml
BOX-2024-06-24/SM_MGMT_FABRIC/: inventory.yml
BOX-2024-06-24/SM_MGMT_FABRIC/group_vars/: ADMIN_MGMT_LEAFS.yml  ENDPOINTS.yml  ENDPOINTS_DC1.yml  ENDPOINTS_DC2.yml  ENDPOINTS_MDF.yml  MGMT_AGG_LEAFS.yml  MGMT_LEAFS.yml  MGMT_TENANTS.yml  SM_MGMT_FABRIC.yml
BOX-2024-06-24/global-variables/: global.yml
BOX-2024-06-24/playbooks/: build.yml  deploy.yml
(+4940 files in other folders)
